# owl

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  roadmap.md
mittelmeer/: Cargo.toml
mittelmeer/src/: lib.rs  migrations.rs
owl/: Cargo.toml
owl/src/: id.rs  lib.rs  main.rs  tag.rs  timestamp.rs  todo.rs
owl/src/cli/: mod.rs  tag.rs  todo.rs
owl/src/document/: mod.rs  parser.rs
owl/src/document/parser/: heading.rs  item.rs  list.rs  mod.rs  paragraph.rs  single_line.rs  util.rs
owl/src/document/parser/line_parser/: heading.rs  item.rs  list.rs  mod.rs  text.rs
owl/src/document/parser/stage1/: empty.rs  heading.rs  item.rs  mod.rs  quote.rs  text.rs
owl/src/document/parser/stage2/: empty.rs  heading.rs  item.rs  mod.rs  paragraph.rs
owl/src/document/parser/sub_parser/: heading.rs  mod.rs  nothing.rs
owl/src/parser/: block.rs  line.rs  mod.rs
owl/src/store/: db.rs  mod.rs
owl/tests/: parser.rs
src/: config.rs  context.rs  error.rs  file.rs  file_format.rs  format.rs  indexer.rs  lib.rs  main.rs  stemmer.rs  store.rs  table.rs  task.rs  tesc.rs  tfidf.rs  time_stamp.rs  todo.rs
src/cli/: agenda.rs  mod.rs  search.rs  todo.rs
src/cli/agenda/: mod.rs
src/cli/task/: list.rs  mod.rs
src/cli/timeline/: mod.rs
src/cli/todo/: agenda.rs  list.rs  mod.rs
src/db/migration/: migrations.rs  mod.rs
src/file/: file.rs  mod.rs  test_file.rs
src/store/: id.rs  mod.rs
src/time/: clocktime.rs  date.rs  duration.rs  mod.rs  span.rs  stamp.rs
src/types/: id.rs  mod.rs  tag.rs  time_stamp.rs
