[package]
name = "owl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
fast-glob = "0.4.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
toml = "0.8.23"
