[package]
name = "owl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clear = "0.1.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
mittelmeer = { path = "../mittelmeer" }
clap = { version = "4.5.35", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"
